--- a/views/register.pug
+++ b/views/register.pug
@@ -2,10 +2,12 @@ extends layout
 
 block content
   form(id="register", action="/register", method="POST")
+  form(id="login", action="/login", method="GET")
 
   div(class="d-flex justify-content-center align-items-center" style="height: 100vh")
     div(class="w-25")
-      input(type="text", form="register", name="username", placeholder="Username", class="form-control")
-      input(type="password" form="register", name="password", placeholder="Password", class="form-control")
-      button(type="submit", form="register", class="form-control btn btn-lg btn-primary") Signup
+      input(type="text", form="register", name="username", placeholder="Username", class="m-2 form-control")
+      input(type="password" form="register", name="password", placeholder="Password", class="m-2 form-control")
+      button(type="submit", form="register", class="m-2 form-control btn btn-lg btn-primary") Signup
+      button(type="submit", form="login", class="m-2 form-control btn btn-lg btn-danger") Or login
     
