--- a/views/login.pug
+++ b/views/login.pug
@@ -6,8 +6,10 @@ block content
 
   div(class="d-flex justify-content-center align-items-center" style="height: 100vh")
     div(class="w-25")
-      input(type="text", form="login", name="username", placeholder="Username", class="m-2 form-control")
+      input(type="text", form="login", name="username", placeholder="Username", value=lastUsername ? lastUsername : '', class="m-2 form-control")
       input(type="password", form="login", name="password", placeholder="Password", class="m-2 form-control")
+      if error
+        p(class="text-center m-2 text-primary") #{error}
       button(type="submit", form="login", class="m-2 form-control btn btn-lg btn-primary") Login
       button(type="submit", form="register", class="m-2 form-control btn btn-lg btn-danger") Or signup
     
