--- a/views/register.pug
+++ b/views/register.pug
@@ -8,6 +8,8 @@ block content
     div(class="w-25")
       input(type="text", form="register", name="username", placeholder="Username", class="m-2 form-control")
       input(type="password" form="register", name="password", placeholder="Password", class="m-2 form-control")
+      if error
+        p(class="text-center m-2 text-primary") #{error}
       button(type="submit", form="register", class="m-2 form-control btn btn-lg btn-primary") Signup
       button(type="submit", form="login", class="m-2 form-control btn btn-lg btn-danger") Or login
     
