--- a/views/login.pug
+++ b/views/login.pug
@@ -4,7 +4,7 @@ block content
   form(id="login", action="/login", method="POST")
   form(id="register", action="/register", method="GET")
 
-  div(class="d-flex justify-content-center align-items-center" style="height: 100vh")
+  div(class="d-flex justify-content-center align-items-center m-0" style="height: 100vh")
     div(class="w-25")
       input(type="text", form="login", name="username", placeholder="Username", value=lastUsername ? lastUsername : '', class="m-2 form-control")
       input(type="password", form="login", name="password", placeholder="Password", class="m-2 form-control")
